	PR 7011 	* elf.c (assign_file_positions_for_non_load_sections): Handle 	PT_GNU_RELRO specially.